--- a/app/src/main/res/layout/drop_target_bar.xml
+++ b/app/src/main/res/layout/drop_target_bar.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:visibility="gone"
         android:text="@string/remove_drop_target_label" />
 
     <com.xiaomi.micolauncher.feature.appmainscreen.FolderDropTarget
