--- a/app/src/main/res/layout/layout_uninstall_confirm2.xml
+++ b/app/src/main/res/layout/layout_uninstall_confirm2.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xiaomi.micolauncher.feature.appmainscreen.uninstall.UninstallConfirmDialog xmlns:android="http://schemas.android.com/apk/res/android"
+<com.xiaomi.micolauncher.feature.appmainscreen.uninstall.UninstallConfirmDialog2 xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#80000000"
-    android:gravity="center_horizontal"
+    android:background="#4d000000"
+    android:gravity="center"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_uninstall"
         android:layout_width="@dimen/dp_606"
         android:layout_height="@dimen/dp_456"
+        android:background="@drawable/sp_40_ffffff"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/iv_app"
+            android:layout_width="@dimen/dp_96"
+            android:layout_height="@dimen/dp_96"
+            android:layout_marginTop="@dimen/dp_40" />
 
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_152"
-            android:textColor="@color/white"
+            android:layout_marginTop="@dimen/dp_46"
+            android:textColor="@color/black"
             android:textSize="@dimen/sp_32"
             tools:text="@string/dialog_uninstall_title" />
 
@@ -29,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
             android:text="@string/dialog_uninstall_content"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="@dimen/sp_28" />
 
         <LinearLayout
@@ -43,21 +50,21 @@
                 android:layout_width="@dimen/dp_250"
                 android:layout_height="@dimen/dp_80"
                 android:layout_marginEnd="@dimen/dp_26"
-                android:background="@drawable/sp_r24_ffffff"
+                android:background="@drawable/sp_r24_142c354a"
                 android:gravity="center"
                 android:text="@string/tv_cancel"
-                android:textColor="@color/white"
+                android:textColor="@color/color_2c354a"
                 android:textSize="@dimen/sp_32" />
 
             <TextView
                 android:id="@+id/tv_uninstall"
                 android:layout_width="@dimen/dp_250"
                 android:layout_height="@dimen/dp_80"
-                android:background="@drawable/sp_r24_ffffff"
+                android:background="@drawable/sp_r24_3482ff"
                 android:gravity="center"
                 android:text="@string/uninstall_drop_target_label"
                 android:textColor="@color/white"
                 android:textSize="@dimen/sp_32" />
         </LinearLayout>
     </LinearLayout>
-</com.xiaomi.micolauncher.feature.appmainscreen.uninstall.UninstallConfirmDialog>
+</com.xiaomi.micolauncher.feature.appmainscreen.uninstall.UninstallConfirmDialog2>
