--- a/app/src/main/res/layout/popup_container.xml
+++ b/app/src/main/res/layout/popup_container.xml
@@ -19,8 +19,7 @@
     android:id="@+id/deep_shortcuts_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?attr/mico_popupColorPrimary"
+    android:background="@drawable/sp_r14_ffffff"
     android:clipToPadding="false"
     android:clipChildren="false"
-    android:elevation="@dimen/dp_5"
     android:orientation="vertical" />
