--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="color_2c354a">#2C354A</color>
     <color name="color_80000000">#80000000</color>
     <color name="color_4d000000">#4D000000</color>
+    <color name="color_3482ff">#3482ff</color>
 </resources>
