--- a/app/src/main/res/layout/fragment_main_app_list.xml
+++ b/app/src/main/res/layout/fragment_main_app_list.xml
@@ -4,8 +4,7 @@
     xmlns:launcher="http://schemas.android.com/apk/res-auto"
     android:id="@+id/launcher"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bg_main_screen">
+    android:layout_height="match_parent">
 
     <com.xiaomi.micolauncher.feature.appmainscreen.dragndrop.DragLayer
         android:id="@+id/drag_layer"
@@ -22,44 +21,40 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:theme="@style/HomeScreenElementTheme"
-            launcher:mico_pageIndicator="@+id/page_indicator" />
-
-        <include
-            android:id="@+id/overview_panel_container"
-            layout="@layout/overview_panel"
-            android:visibility="gone" />
+            android:theme="@style/HomeScreenElementTheme" />
 
         <!-- Keep these behind the workspace so that they are not visible when
          we go into AllApps -->
-        <com.xiaomi.micolauncher.feature.appmainscreen.pageindicators.WorkspacePageIndicator
-            android:id="@+id/page_indicator"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
-            android:layout_gravity="bottom|center_horizontal"
-            android:theme="@style/HomeScreenElementTheme" />
+<!--        <com.xiaomi.micolauncher.feature.appmainscreen.pageindicators.WorkspacePageIndicator-->
+<!--            android:id="@+id/page_indicator"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="4dp"-->
+<!--            android:layout_gravity="bottom|center_horizontal"-->
+<!--            android:theme="@style/HomeScreenElementTheme"-->
+<!--            android:visibility="gone" />-->
 
         <include
             android:id="@+id/drop_target_bar"
             layout="@layout/drop_target_bar" />
 
-        <include android:id="@+id/scrim_view"
-            layout="@layout/scrim_view" />
+<!--        <include android:id="@+id/scrim_view"-->
+<!--            layout="@layout/scrim_view"-->
+<!--            android:visibility="gone" />-->
 
-        <include
-            android:id="@+id/apps_view"
-            layout="@layout/all_apps"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="invisible" />
+<!--        <include-->
+<!--            android:id="@+id/apps_view"-->
+<!--            layout="@layout/all_apps"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:visibility="gone" />-->
 
         <!-- DO NOT CHANGE THE ID -->
-        <include
-            android:id="@+id/hotseat"
-            layout="@layout/hotseat"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+<!--        <include-->
+<!--            android:id="@+id/hotseat"-->
+<!--            layout="@layout/hotseat"-->
+<!--            android:visibility="gone"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent" />-->
     </com.xiaomi.micolauncher.feature.appmainscreen.dragndrop.DragLayer>
 
 </com.xiaomi.micolauncher.feature.appmainscreen.LauncherRootView>
